<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    tools:context=".base.fragments.NavigationDrawerFragment"
    android:clickable="true"
    android:focusable="true"
    android:fillViewport="true"
    tools:viewBindingIgnore="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/background_drawer" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/foreground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/drawer_logo" />
        </FrameLayout>

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/account"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/switch_provider"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:text="@string/switch_provider_menu_option"
            app:icon="@drawable/ic_switch_provider_36"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/black800_high_transparent"
            />

        <se.leap.bitmaskclient.base.views.IconSwitchEntry
            android:id="@+id/battery_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/save_battery"
            app:subtitle="@string/subtitle_save_battery"
            app:icon="@drawable/ic_battery_36"
            />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/manualGatewaySelection"
            app:text="@string/gateway_selection_title"
            app:subtitle="@string/gateway_selection_recommended_location"
            app:icon="@drawable/ic_web"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="visible"
            />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/language_switcher"
            app:text="@string/select_language"
            app:icon="@drawable/translate"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="visible"/>

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/advancedSettings"
            app:icon="@drawable/ic_cog"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:text="@string/advanced_settings"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/black800_high_transparent"
            />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/donate_title"
            app:icon="@drawable/ic_donate_36"
            android:visibility="gone"
            />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/log_fragment_title"
            app:icon="@drawable/ic_log_36"
            />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/about_fragment_title"
            app:icon="@drawable/ic_about_36"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/black800_high_transparent"
            android:layout_weight="1"
            />


    </LinearLayout>

</ScrollView>
